--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,6 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Tyler Whitchurch <tyler.whitchurch@atlasschool.com>
+Clay Sexton <clay.sexton@atlasschool.com>
+Zack Yuan <zack.yuan@atlasschool.com>
